Correction des erreur lié a l'affraichissement\ Ajout des fonctionnaliter des quanitée

--- a/data/settings.json
+++ b/data/settings.json
@@ -29,7 +29,7 @@
         "losses": true,
         "daily_summary": true
     },
-    "language": "fr",
+    "language": "en",
     "date_format": "%Y-%m-%d",
     "backup_frequency": 7
 }
